deploymentRoot/objects/Org_Connector_Config_Validation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Duplicate_External_Connection__c</fullName>
        <label>Duplicate External Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Local_Connection__c</fullName>
        <label>Duplicate Local Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Connection_Name__c</fullName>
        <label>Invalid Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Connection_Absent__c</fullName>
        <label>Local Connection Absent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgType_Not_Selected__c</fullName>
        <label>OrgType Not Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_length_error__c</fullName>
        <label>Username length error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Connector Config Validation</label>
</CustomObject>